--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,3 +4,6 @@
   padding: 0;
   font-family: Arial, Helvetica, sans-serif;
 }
+
+/* Importing Bootstrap SCSS file. */
+@import 'bootstrap/scss/bootstrap';
